// TEMPLATE:

// == {es} version n.n.n

//=== Breaking Changes

//=== Deprecations

//=== New Features

//=== Enhancements

//=== Bug Fixes

//=== Regressions

== {es} version 7.5.0

=== Enhancements

* Improve performance and concurrency training boosted tree regression models.
For large data sets this change was observed to give a 10% to 20% decrease in
train time. (See {ml-pull}622[#622].)

== {es} version 7.4.0

=== Bug Fixes

* Rename outlier detection method values knn and tnn to distance_kth_nn and distance_knn
respectively to match the API. (See {ml-pull}598[#598].)

== {es} version 7.3.1

=== Bug Fixes

* Only trap the case that more rows are supplied to outlier detection than expected.
Previously, if rows were excluded from the data frame after supplying the row count
in the configuration then we detected the inconsistency and failed outlier detection.
However, this legitimately happens in case where the field values are non-numeric or
array valued. (See {ml-pull}569[#569].)

== {es} version 7.3.0

=== Enhancements

* Upgrade to a newer version of the Apache Portable Runtime library. (See {ml-pull}495[#495].)
* Improve stability of modelling around change points. (See {ml-pull}496[#496].)

=== Bug Fixes

* Reduce false positives associated with the multi-bucket feature. (See {ml-pull}491[#491].)
* Reduce false positives for sum and count functions on sparse data. (See {ml-pull}492[#492].)

== {es} version 7.2.1

=== Bug Fixes

* Fix an edge case causing spurious anomalies (false positives) if the variance in the count of events
changed significantly throughout the period of a seasonal quantity. (See {ml-pull}489[#489].)

== {es} version 7.2.0

=== Enhancements

* Remove hard limit for maximum forecast interval and limit based on the time interval of data added
to the model. (See {ml-pull}214[#214].)

* Use hardened compiler options to build 3rd party libraries. (See {ml-pull}453[#453].)
